@@ -200,3 +200,5 @@
 2016-02-12 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the metadata system in glassplayer(1) to include
 	static as well as dynamic fields.
+2016-02-12 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented metadata display in glassplayergui(1).
